# rl.os

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  context7.json  eslint.config.mjs  install.sh  knip.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  toolchain-versions.json  tsconfig.base.json  tsdown.config.base.ts  turbo.jsonc  vercel.json
.changeset/: bright-ants-wink.md  (+11 more)
python/: AGENTS.md  CHANGELOG.md  Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini  setup.py
python/composio/: exceptions.py  sdk.py  types.py
python/composio/client/: __init__.py  types.py
python/composio/core/models/: __init__.py  _files.py  base.py  connected_accounts.py  experimental.py  mcp.py  tool_router.py  tool_router_session.py  tool_router_session_delete.py  tool_router_session_files.py  tools.py  triggers.py
python/composio/core/provider/: __init__.py  _openai.py  _openai_responses.py  agentic.py  base.py  none_agentic.py
python/composio/utils/: json_schema.py  mimetypes.py  openapi.py  sensitive_file_upload_paths.py  shared.py  toolkit_version.py
python/config/: mypy.ini  pytest.ini  vulture_allowlist.py
python/docs/: tool-router.md
python/examples/: experimental_tool_router_advanced_example.py  modifiers.py
python/examples/tool_router/: authorize.py  claude_agent.py  crewai_agent.py  files.py  langchain_agent.py  openai_agents.py  tool_router_mcp.py  tools.py
python/providers/: AGENTS.md
python/providers/anthropic/: README.md  pyproject.toml  setup.py
python/providers/anthropic/composio_anthropic/: provider.py
python/providers/autogen/: README.md  pyproject.toml  setup.py
python/providers/autogen/composio_autogen/: provider.py
python/providers/claude_agent_sdk/: README.md  pyproject.toml  setup.py
python/providers/claude_agent_sdk/composio_claude_agent_sdk/: provider.py
python/providers/claude_agent_sdk/tests/: test_provider.py
python/providers/crewai/: README.md  pyproject.toml  setup.py
python/providers/crewai/composio_crewai/: providers.py
python/providers/gemini/: README.md  pyproject.toml  setup.py
python/providers/gemini/composio_gemini/: provider.py
python/providers/google/: README.md  pyproject.toml  setup.py
python/providers/google/composio_google/: provider.py
python/providers/google_adk/: README.md  pyproject.toml  setup.py
python/providers/google_adk/composio_google_adk/: provider.py
python/providers/langchain/: README.md  langchain_demo.py  pyproject.toml  setup.py
python/providers/langchain/composio_langchain/: provider.py
python/providers/langgraph/: README.md  pyproject.toml  setup.py
python/providers/llamaindex/: README.md  pyproject.toml  setup.py
python/providers/openai/: README.md  pyproject.toml  setup.py
python/providers/openai_agents/: README.md  pyproject.toml  setup.py
python/scripts/: generate-docs.py
python/tests/: conftest.py  test_auth_configs.py  test_auto_upload_download_files.py  test_connected_accounts.py  test_cross_sdk_compatibility.py  test_files.py  test_gemini_provider.py  test_generate_docs.py  test_imports.py  test_json_schema.py  test_mimetypes.py  test_no_retry_writes.py  test_normalize_tool_arguments.py  test_openapi.py  test_provider.py  test_schema_parser.py  test_sensitive_file_upload_paths.py  test_tool_execution.py  test_tool_router.py  test_tool_router_session_files.py  test_tool_schema_aliasing.py  test_toolkit_version.py  test_triggers.py  test_type_inference.py  test_type_inference_anthropic.py  test_type_inference_autogen.py  test_type_inference_claude_agent_sdk.py  test_type_inference_crewai.py  test_type_inference_custom_provider.py  test_type_inference_gemini.py  test_type_inference_google.py  test_type_inference_google_adk.py  test_type_inference_langchain.py  test_type_inference_langgraph.py  test_type_inference_llamaindex.py  test_type_inference_openai_agents.py  test_verify_webhook_integration.py  test_webhook_events.py
(+915 files in other folders)
