[project]
name = "composio"
version = "0.17.1"
description = "SDK for integrating Composio with your applications."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pysher>=1.0.8",
    "pydantic>=2.13.4",
    "composio-client==1.42.0",
    "typing-extensions>=4.15.0",
    "openai>=2.42.0",
    "json-schema-to-pydantic>=0.4.11",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "composio",
    "nox>=2026.4.10",
    "pytest>=9.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.15.1",
    "requests>=2.34.2",
    "ruff>=0.15.17",
    # Langchain provider demo
    "langchain_openai==1.3.3",
    "fastapi>=0.137.1",
    "twine>=6.2.0",
    "click>=8.4.1",
    "semver>=3.0.4",
    "tomli>=2.4.1",
]
