[project]
name = "composio-autogen"
version = "0.17.1"
description = "Use Composio to get an array of tools with your autogen agent."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ag2>=0.14,<1.0",
    "flaml==2.6.0",
    "autogen_core>=0.7.5",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
