[project]
name = "composio-gemini"
version = "0.17.1"
description = "Use Composio to get an array of tools with your Gemini agent."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=2.8.0",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
