[project]
name = "composio-langchain"
version = "0.17.1"
description = "Use Composio to get an array of tools with your Langchain agent."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=1.3.9,<2.0.0",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
