[project]
name = "composio-langgraph"
version = "0.17.1"
description = "Use Composio to get array of tools with LangGraph Agent Workflows."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=1.2.5",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
