[project]
name = "composio-llamaindex"
version = "0.17.1"
description = "Use Composio to get array of tools with LlamaIndex Agent Workflows."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "llama_index>=0.14.22",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
